tests/cases/compiler-development/artifact/errors/syntax-recovery-top-level.ari
fn good() -> i64 {
    return 1;
}

fn broken() -> i64 {
    let value: i64 = ;
}

fn after() -> i64 {
    return 2;
}
